# hallmark-mlx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.lab-book/: 2026-04-05-benchmark-and-repro.md  README.md
configs/: base.yaml  eval_hallmark.yaml  tools.yaml  train_bonsai_8b.yaml  train_qwen_1_5b.yaml  train_qwen_1_5b_kept.yaml  train_qwen_3b.yaml  train_qwen_3b_4bit_compare.yaml
docs/: architecture.md  evaluation.md  roadmap.md  training_data.md  weco.md
examples/: README.md  live_bootstrap_inputs.jsonl  live_bootstrap_inputs_round2.jsonl  live_bootstrap_inputs_round7.jsonl  live_bootstrap_traces.jsonl  live_bootstrap_traces_round2.jsonl  live_bootstrap_traces_round7.jsonl  reviewed_seed_traces.jsonl  reviewed_seed_traces_combined.jsonl  reviewed_seed_traces_round2.jsonl  reviewed_seed_traces_round3.jsonl  reviewed_seed_traces_round4.jsonl  reviewed_seed_traces_round5.jsonl  reviewed_seed_traces_round6.jsonl  reviewed_seed_traces_round7.jsonl  seed_inputs.jsonl
scripts/: build_trace_dataset.py  build_weco_splits.py  compare_policy_modes.py  export_benchmark_table.py  export_official_split_report.py  export_submission_packet.py  export_submission_readiness.py  merge_official_eval_shards.py  plot_benchmark_comparison.py  prepare_hf_release.py  refresh_confirmed_benchmarks.py  render_qwen_visualization.py  run_hallmark_baseline_comparison.py  run_hallmark_eval.sh  run_local_inference.sh  run_official_controller_eval.py  run_official_split_suite.py  run_submission_eval.py  run_train_mlx.sh  run_train_qwen_1_5b.sh  setup_mac.sh  (+3 more)
(+156 files in other folders)
