[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hallmark-mlx"
version = "0.1.0"
description = "Mac-native MLX scaffold for citation verification policy learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sebastian Boehler" }
]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0.1,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.10,<4",
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "tueplots>=0.2.4,<1",
  "mypy>=1.10,<2",
]
mlx = [
  "mlx-lm[train]>=0.31.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
weco = [
  "weco>=0.3.25,<0.4",
]

[project.scripts]
hallmark-mlx = "hallmark_mlx.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hallmark_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
